[package]
name = "turbo-remote-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.4", features = ["util"] }
tokio = {version = "1", features = ["full"]}
tokio-util = { version = "0.7", features = ["io"] }
axum = "0.5"
futures = "0.3"
serde_json = "1.0"